# k230_sdk

./: .gitignore  .gitlab-ci.yml  Kconfig  Kconfig.board  Kconfig.memory  Kconfig.storage  Kconfig.toolchain  Kconfig.wifi  LICENSE  Makefile  README.md  build.env  parse.mak  repo.mak
src/reference/ai_poc/: CMakeLists.txt  README.md  build_app.sh  build_app_sub.sh  version
src/reference/ai_poc/anomaly_det/: CMakeLists.txt  README.md  anomaly_det.cc  anomaly_det.h  main.cc  scoped_timing.hpp  utils.cc  utils.h
src/reference/ai_poc/bytetrack/: BYTETracker.cc  BYTETracker.h  CMakeLists.txt  README.md  STrack.cc  STrack.h  dataType.h  kalmanFilter.cc  kalmanFilter.h  lapjv.cc  lapjv.h  main.cc  person_detect.cc  person_detect.h  utils.cc  utils.h
src/reference/ai_poc/cmake/: Riscv64.cmake
src/reference/ai_poc/crosswalk_detect/: CMakeLists.txt  README.md  ai_base.cc  crosswalk_detect.cc  crosswalk_detect.h  main.cc  vi_vo.h
src/reference/ai_poc/dec_ai_enc/: CMakeLists.txt  README.md
src/reference/ai_poc/demo_mix/: CMakeLists.txt  README.md  ai_base.cc  ai_base.h  crop.cc  crop.h  cv2_utils.cc  cv2_utils.h  dynamic_gesture.cc  face_pose.cc  face_pose.h  hand_detection.cc  hand_keypoint.cc  hand_keypoint.h  main.cc  src.cc  src.h  tracker.cc  tracker.h  utils.cc  utils.h
src/reference/ai_poc/distraction_reminder/: CMakeLists.txt  README.md  face_detection.h  face_pose.cc  main.cc
src/reference/ai_poc/dms_system/: CMakeLists.txt  README.md  ai_base.cc  face_detection.cc  hand_detection.cc  main.cc  utils.h
src/reference/ai_poc/dynamic_gesture/: CMakeLists.txt  README.md  dynamic_gesture.cc  dynamic_gesture.h  hand_detection.cc  hand_detection.h  hand_keypoint.cc  hand_keypoint.h  main.cc  utils.cc  utils.h
src/reference/ai_poc/eye_gaze/: CMakeLists.txt  README.md  eye_gaze.cc  eye_gaze.h  main.cc
src/reference/ai_poc/face_alignment/: CMakeLists.txt  README.md  constant.h  face_alignment.cc  face_alignment.h  face_alignment_post.cc  face_alignment_post.h  face_detection.cc  main.cc  rasterize.cc  rasterize.h  utils.h
src/reference/ai_poc/face_detection/: CMakeLists.txt  README.md  ai_base.cc  face_detection.cc  main.cc
src/reference/ai_poc/face_emotion/: CMakeLists.txt  README.md  ai_base.cc  anchors_320.cc  face_emotion.cc  face_emotion.h  main.cc  vi_vo.h
src/reference/ai_poc/face_gender/: CMakeLists.txt  README.md  ai_base.cc  anchors_640.cc  face_gender.cc  face_gender.h  main.cc  utils.cc  utils.h
src/reference/ai_poc/face_glasses/: CMakeLists.txt  README.md  anchors_320.cc  face_glasses.cc  face_glasses.h  main.cc  utils.h
src/reference/ai_poc/face_landmark/: CMakeLists.txt  README.md  ai_base.cc  anchors_640.cc  face_dense_landmark.cc  face_dense_landmark.h  face_detection.cc  main.cc
src/reference/ai_poc/face_mask/: CMakeLists.txt  README.md  ai_base.cc  face_detection.cc  face_mask.cc  face_mask.h  main.cc
src/reference/ai_poc/face_mesh/: CMakeLists.txt  README.md  ai_base.cc  face_detection.h  face_mesh.cc  face_mesh.h  face_mesh_post.cc  face_mesh_post.h  main.cc
src/reference/ai_poc/face_parse/: CMakeLists.txt  README.md  ai_base.h  face_detection.h  face_parse.cc  face_parse.h  main.cc  vi_vo.h
src/reference/ai_poc/face_pose/: CMakeLists.txt  README.md  ai_base.cc  face_pose.cc  main.cc
src/reference/ai_poc/face_verification/: CMakeLists.txt  README.md  face_verification.cc  face_verification.h  main.cc
src/reference/ai_poc/falldown_detect/: CMakeLists.txt  README.md  main.cc
src/reference/ai_poc/finger_guessing/: CMakeLists.txt  README.md  ai_base.cc  hand_detection.cc  main.cc  utils.cc  utils.h  vi_vo.h
src/reference/ai_poc/fitness/: CMakeLists.txt  README.md  main.cc  pose_action.cc  pose_action.h  pose_detect.cc  utils.cc  utils.h
src/reference/ai_poc/head_detection/: CMakeLists.txt  README.md  ai_base.cc  ai_base.h  head_detection.cc  head_detection.h  main.cc  utils.cc  utils.h  vi_vo.h
src/reference/ai_poc/helmet_detect/: CMakeLists.txt  README.md  helmet_detect.cc  helmet_detect.h  main.cc
src/reference/ai_poc/kws/: CMakeLists.txt  README.md  ai_base.cc  ai_base.h  audio_stream.h  fbank.h  feature_pipeline.cc  feature_pipeline.h  kws.cc  kws.h  main.cc  pcm_data.cc
src/reference/ai_poc/licence_det/: CMakeLists.txt  README.md  anchors_640.cpp  licence_det.cc  main.cc  utils.cc  utils.h
src/reference/ai_poc/licence_det_rec/: CMakeLists.txt  README.md  ai_base.cc  anchors_320.cpp  licence_det.h  licence_reco.cc  licence_reco.h  main.cc  utils.cc  utils.h
src/reference/ai_poc/llamac/: README.md  llama_run.cc
src/reference/ai_poc/nanotracker/: CMakeLists.txt  README.md  ai_base.cc  crop.cc  crop.h  cv2_utils.cc  cv2_utils.h  main.cc  src.cc  src.h  utils.cc
src/reference/ai_poc/object_detect_yolov8n/: CMakeLists.txt  README.md  main.cc  ob_det.cc  ob_det.h  utils.cc  utils.h
src/reference/ai_poc/ocr/: CMakeLists.txt  README.md  clipper.hpp  main.cc  ocr_box.cc  ocr_box.h  ocr_reco.cc  ocr_reco.h  utils.cc  utils.h
src/reference/ai_poc/person_attr/: CMakeLists.txt  README.md  main.cc  person_detect.cc  person_detect.h  pulc.cc  pulc.h  utils.h  vi_vo.h
src/reference/ai_poc/person_detect/: CMakeLists.txt  README.md  ai_base.h  main.cc  person_detect.h  vi_vo.h
src/reference/ai_poc/person_distance/: CMakeLists.txt  README.md  main.cc  person_detect.cc  utils.h
src/reference/ai_poc/pose_det_rtsp_plug/: CMakeLists.txt  README.md
src/reference/ai_poc/pose_detect/: CMakeLists.txt  README.md  ai_base.cc  main.cc  pose_detect.cc  pose_detect.h  utils.cc  utils.h
src/reference/ai_poc/pphumanseg/: CMakeLists.txt  README.md  main.cc  pphumanseg.cc  pphumanseg.h  utils.cc  utils.h
src/reference/ai_poc/puzzle_game/: CMakeLists.txt  README.md  hand_keypoint.cc  main.cc  utils.cc  utils.h
src/reference/ai_poc/segment_yolov8n/: CMakeLists.txt  README.md  main.cc  segment.cc  segment.h  utils.cc  utils.h  vi_vo.h
src/reference/ai_poc/self_learning/: CMakeLists.txt  README.md  ai_base.cc  main.cc  self_learning.cc  self_learning.h  (+2 more)
src/reference/fancy_poc/: CMakeLists.txt  build_app.sh  readme.md  version
(+4038 files in other folders)
