cmake_minimum_required(VERSION 3.2)
project(nncase_sdk C CXX)

set(nncase_sdk_root "${PROJECT_SOURCE_DIR}/../../big/nncase/")
set(k230_sdk ${nncase_sdk_root}/../../../)
set(CMAKE_EXE_LINKER_FLAGS "-T ${PROJECT_SOURCE_DIR}/cmake/link.lds --static")

# set opencv
set(k230_opencv ${k230_sdk}/src/big/utils/lib/opencv)
include_directories(${k230_opencv}/include/opencv4/)
link_directories(${k230_opencv}/lib ${k230_opencv}/lib/opencv4/3rdparty)

# set mmz
link_directories(${k230_sdk}/src/big/mpp/userapps/lib)

# set nncase
include_directories(${nncase_sdk_root}/riscv64)
include_directories(${nncase_sdk_root}/riscv64/nncase/include)
include_directories(${nncase_sdk_root}/riscv64/nncase/include/nncase/runtime)
link_directories(${nncase_sdk_root}/riscv64/nncase/lib/)

add_definitions(-DCONFIG_BOARD_K230_CANMV)

add_subdirectory(face_detection)
add_subdirectory(face_landmark)
add_subdirectory(face_glasses)
add_subdirectory(face_mask)
add_subdirectory(face_emotion)
add_subdirectory(face_pose)
add_subdirectory(face_gender)
add_subdirectory(face_parse)
add_subdirectory(head_detection)
add_subdirectory(sq_hand_det)
add_subdirectory(sq_handkp_class)
add_subdirectory(sq_handkp_det)
add_subdirectory(sq_handreco)
add_subdirectory(sq_handkp_ocr)
add_subdirectory(licence_det)
add_subdirectory(licence_det_rec)
add_subdirectory(object_detect_yolov8n)
add_subdirectory(person_detect)
add_subdirectory(falldown_detect)
add_subdirectory(pose_detect)
add_subdirectory(person_attr)
add_subdirectory(vehicle_attr)
add_subdirectory(pphumanseg)
add_subdirectory(fitness)
add_subdirectory(bytetrack)
add_subdirectory(segment_yolov8n)
add_subdirectory(finger_guessing)
add_subdirectory(smoke_detect)
add_subdirectory(nanotracker)
add_subdirectory(traffic_light_detect)
add_subdirectory(space_resize)
